2025-07-29  Zhengyi Fu  <i@fuzy.me>

	* init.el (+custom-fonts-alist): Add Unifont and as fallback for
	Unicode characters.

2025-07-29  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/modify-other-keys.el (modify-other-keys--init): Remove
	unneeded logging message.

2025-07-28  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/modify-other-keys.el (modify-other-keys--init): Ignore
	initial_terminal and graphical displays.

2025-07-28  Zhengyi Fu  <i@fuzy.me>

	Fix diff-hl-margin

	* init.el (diff-hl-margin-symbols-alist): Fix invalid key name.
	(diff-hl-margin-ensure-visible): Override this function to set
	margin width automatically.

2025-07-28  Zhengyi Fu  <i@fuzy.me>

	* init.el (+custom-faces): Customize diff-hl-margin faces.

2025-07-28  Zhengyi Fu  <i@fuzy.me>

	* init.el (diff-hl-margin-symbols-alist): Use more Chinese
	characters.

2025-07-28  Zhengyi Fu  <i@fuzy.me>

	Diff-hl: Display Chinese characters in the margins

	* init.el (diff-hl-margin-symbols-alist): Set to use Chinese
	characters.
	(+diff-hl-enlarge-margin-width): New function.  Enlarge margin
	widths to accommodate Chinese characters.

2025-07-28  Zhengyi Fu  <i@fuzy.me>

	* init.el (toggle-map): Bind "t" to `consult-theme'.

2025-07-28  Zhengyi Fu  <i@fuzy.me>

	Fix modify-otehr-keys

	* site-lisp/modify-other-keys.el
	(modify-other-keys--setup-input-decode-map): New function.  Set up
	per-terminal input-decode-map.

2025-07-27  Zhengyi Fu  <i@fuzy.me>

	* init.el (embark-cycle-key): Set to "C-.".

2025-07-27  Zhengyi Fu  <i@fuzy.me>

	* init.el (copy-json-as-lisp): New command.

2025-07-25  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/modify-other-keys.el: Refactor.

2025-07-25  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/modify-other-keys.el: New file.

2025-07-25  Zhengyi Fu  <i@fuzy.me>

	* init.el (remote-eat): Remove connection local variables profile.
	(eat-exec@connection-local-vars): Remove advice.

2025-07-24  Zhengyi Fu  <i@fuzy.me>

	* early-init.el (kill-do-not-save-duplicates): Set to t.
